# nginx-conf-tool

./: Makefile  README.md  pyproject.toml
samples/: simple.conf
src/nginx_conf_tool/: parse.py  parser.py  tree.py
src/test/: test_tree.py
