[project]
name = "nginx-conf-tool"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hai Vu", email = "haivu2004@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "crossplane>=0.5.8",
]

[project.scripts]
nct = "nginx_conf_tool:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
